tests/ui/args-flatten-unnamed.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/args-flatten-unnamed.rs:6:12
  |
6 |     inner: Inner,
  |            ^^^^^ evaluation panicked: TODO: cannot arg(flatten) positional arguments yet
